fix(divider): fix layout error when set align-items

--- a/packages/varlet-ui/src/divider/divider.less
+++ b/packages/varlet-ui/src/divider/divider.less
@@ -26,10 +26,6 @@
     padding: var(--divider-text-margin);
     border-top: none;
     border-left: 1px solid var(--divider-color);
-
-    // fix layout failure when parent elements sets align-items
-    align-items: stretch;
-    display: inline-flex;
   }
 
   &--inset {
